Thu Jun 21 17:08:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL.h:
        * ace/DLL_Manager.h:
        * ace/DLL_Manager.cpp:
          Changed the order that the ACE_DLL_Manager attempts to open a library
          Foo so that it will try <prefix>Foo<decorator>.<suffix> before
          Foo<decorator>.<suffix>. This makes library loading using ACE succeed
          on the first try instead of the fourth on any platform requiring a
          library prefix, like Linux. For platforms that don't have a prefix
          it will also succeed on the first time. Thanks to Trent Nadeau
          <Trent dot Nadeau at ngc dot com> for providing this improvement

Wed Jun 20 12:54:29 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * tests/CDR_Test.cpp:

          Fixed error in test execution.

Mon Jun 18 20:40:29 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * ace/CDR_Stream.h:
        * ace/CDR_Stream.cpp:
        * tests/CDR_Test.cpp:

          Extended ACE_OutputCDR placeholders to support all ACE_CDR
          simple types.

Mon Jun 18 13:20:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Use -z for debug mode

Mon Jun 18 06:44:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/*:
          Updated with latest files from debian packaging

Thu Jun 14 14:05:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XML_Error_Handler.cpp:
          Only print errors on cerr when we have ACE::debug enabled

Wed Jun 13 05:57:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added another package

Tue Jun 12 17:30:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Exclude CIAO_*_OpenDDS workspaces for the moment

Mon Jun 11 21:45:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * ace/config-lite.h: